--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="头文件\data structure">
+      <UniqueIdentifier>{a683938c-1ab5-42e3-bdd1-d7cc72a6d8c9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore">
@@ -23,13 +26,16 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\vector.h">
-      <Filter>头文件</Filter>
+    <ClInclude Include="include\list.hpp">
+      <Filter>头文件\data structure</Filter>
     </ClInclude>
-    <ClInclude Include="include\list.h">
-      <Filter>头文件</Filter>
+    <ClInclude Include="include\stack.hpp">
+      <Filter>头文件\data structure</Filter>
     </ClInclude>
-    <ClInclude Include="include\stack.h">
+    <ClInclude Include="include\vector.hpp">
+      <Filter>头文件\data structure</Filter>
+    </ClInclude>
+    <ClInclude Include="Test.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -37,13 +43,7 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\vector.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="src\list.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="src\stack.cpp">
+    <ClCompile Include="Test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
