--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -41,7 +41,10 @@
     <ClInclude Include="include\queue.hpp">
       <Filter>头文件\data structure</Filter>
     </ClInclude>
-    <ClInclude Include="include\BiTree.hpp">
+    <ClInclude Include="include\tree.hpp">
+      <Filter>头文件\data structure</Filter>
+    </ClInclude>
+    <ClInclude Include="include\string.hpp">
       <Filter>头文件\data structure</Filter>
     </ClInclude>
   </ItemGroup>
