--- a/DataStructure.vcxproj
+++ b/DataStructure.vcxproj
@@ -150,10 +150,12 @@
     <ClInclude Include="include\stack.hpp" />
     <ClInclude Include="include\vector.hpp" />
     <ClInclude Include="Test.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Test.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
