重构容器类实现，优化内存管理和接口一致性
- 重构stack类，改为基于vector实现，简化内部逻辑
- 将string和vector中的int类型改为size_t，提高跨平台兼容性
- 为vector添加front()和back()方法，完善容器接口
- 修复vector的复制构造函数和赋值运算符重载
- 统一测试函数为独立函数，移除Test类包装
- 修复Student类的比较运算符const修饰符

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,22 @@
 ﻿cmake_minimum_required(VERSION 3.10)
-project(DSA)
+project(DSA-Test)
 
 # 设置C++标准
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# 主库（头文件库）
-add_library(DataStructure INTERFACE)
-target_include_directories(DataStructure INTERFACE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
+# 包含目录
+include_directories(include test)
+
+# 查找所有源文件和头文件
+file(GLOB TEST_SOURCES "test/*.cpp")
+file(GLOB TEST_HEADERS "test/*.h")
+file(GLOB INCLUDE_HEADERS "include/*")
 
 # 测试项目
-file(GLOB TEST_SOURCES "test/*.cpp")
-add_executable(DSA-Test ${TEST_SOURCES})
+add_executable(DSA-Test ${TEST_SOURCES} ${TEST_HEADERS} ${INCLUDE_HEADERS})
 
-# 链接库
-target_link_libraries(DSA-Test DataStructure)
+# 在Visual Studio中组织文件
+source_group("Header Files\\Test" FILES ${TEST_HEADERS})
+source_group("Header Files\\DSA" FILES ${INCLUDE_HEADERS})
+source_group("Source Files" FILES ${TEST_SOURCES})
